меняет центровщик, внутренние блоки

--- a/source/sass/blocks/addons-container.scss
+++ b/source/sass/blocks/addons-container.scss
@@ -1,7 +1,8 @@
-.addons-inner {
+.addons-container {
   @media (--wide-vp) {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     column-gap: 80px;
   }
 }
