--- a/source/sass/blocks/control.scss
+++ b/source/sass/blocks/control.scss
@@ -1,8 +1,8 @@
 .control {
-  position: relative;
+  // position: relative;
   display: flex;
   width: 65.5%;
-  margin: 0 auto;
+  // margin: 0 auto;
   align-items: center;
   justify-content: space-between;
   box-sizing: border-box;
