--- a/source/sass/blocks/extra.scss
+++ b/source/sass/blocks/extra.scss
@@ -13,8 +13,7 @@
     width: 95%;
     grid-column: 1 / 2;
     grid-row: 2 / 3;
-    padding-left: 0;
-    padding-right: 0;
+    padding: 0;
   }
 }
 
