--- a/source/sass/blocks/product-block.scss
+++ b/source/sass/blocks/product-block.scss
@@ -36,7 +36,6 @@
       top: 0;
       left: 0;
       right: 0;
-      width: 100vw;
       height: 1px;
       background-color: #ebebeb;
     }
@@ -48,7 +47,7 @@
       position: absolute;
       top: 0;
       right: 0;
-      width: 100vw;
+      left: 0;
       height: 1px;
       background-color: #ebebeb;
     }
