--- a/source/templates/header.twig
+++ b/source/templates/header.twig
@@ -1,5 +1,5 @@
 <header class="page__header">
-  <div class="header container">
+  <div class="header page__centerer">
     <a class="logo" href="index.html" {% if permalink == "index.html" %}aria-current="page"{% endif %}>
       <img class="logo__icon" src="./img/logo-cat-mark.svg" width="34" height="38" alt="Логотип кэт-энерджи.">
       <img class="logo__text" src="./img/logo-cat-text.svg" width="101" height="18"
