--- a/source/sass/blocks/contacts-container.scss
+++ b/source/sass/blocks/contacts-container.scss
@@ -1,11 +1,9 @@
-.contacts-outer {
+.contacts-container {
   background-color: $color__white;
 
   @media (--wide-vp) {
     width: 1300px;
-    padding-left: 40px;
-    padding-right: 40px;
-    margin: 0 auto;
+    padding-left: 50px;
     box-sizing: border-box;
   }
 
