--- a/source/sass/blocks/demo-slider.scss
+++ b/source/sass/blocks/demo-slider.scss
@@ -1,17 +1,14 @@
 .demo-slider {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   position: relative;
   box-sizing: border-box;
   padding-bottom: 42px;
 
   @media (--not-narrow-vp) {
-    padding-top: 50px;
     padding-bottom: 38px;
     left: 14px;
-  }
-
-  @media (--wide-vp) {
-    left: 0;
-    margin-top: -90px;
   }
 }
 
