--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -3,7 +3,9 @@
 }
 
 .footer__map {
-  height: 362px;
+  @media (--narrow-vp) {
+    height: 362px;
+  }
 
   @media (--not-narrow-vp) {
     height: 400px;
@@ -12,4 +14,7 @@
 
 .footer__map iframe {
   display: block;
+  width: 100%;
+  height: 100%;
+  border: none;
 }
