--- a/source/sass/blocks/form-group.scss
+++ b/source/sass/blocks/form-group.scss
@@ -1,44 +1,42 @@
 .form-group {
   border: none;
   padding: 25px 0;
-  margin-left: 0;
-  margin-right: 0;
 
   &--cat-info {
     @media (--not-narrow-vp) {
-      margin-bottom: 45px;
+      padding-bottom: 45px;
     }
   }
 
   &--purpose {
     border-top: 1px solid #d9d9d9;
     border-bottom: 1px solid #d9d9d9;
-    margin-bottom: 28px;
+    padding-bottom: 28px;
     padding-left: 43px;
 
     @media (--not-narrow-vp) {
       border: 1px solid #d9d9d9;
       padding-left: 90px;
       padding-top: 30px;
-      margin-bottom: 75px;
+      padding-bottom: 75px;
     }
 
     @media (--wide-vp) {
       border: 1px solid #d9d9d9;
       padding-left: 90px;
-      margin-top: 26px;
+      padding-top: 26px;
     }
   }
 
   &--master {
     @media (--not-narrow-vp) {
-      margin-bottom: 42px;
+      padding-bottom: 42px;
     }
   }
 
   &--comment {
     @media (--not-narrow-vp) {
-      margin-bottom: 34px;
+      padding-bottom: 34px;
     }
   }
 }
@@ -48,24 +46,24 @@
   @include font-size(24,36);
 
   &--master {
-    margin-bottom: 9px;
+    padding-bottom: 9px;
 
     @media (--not-narrow-vp) {
-      margin-bottom: 53px;
+      padding-bottom: 53px;
     }
   }
 
   &--comment {
-    margin-bottom: 12px;
+    padding-bottom: 12px;
 
     @media (--not-narrow-vp) {
-      margin-bottom: 50px;
+      padding-bottom: 50px;
     }
   }
 
   &--add {
     @media (--not-narrow-vp) {
-      margin-bottom: 37px;
+      padding-bottom: 37px;
     }
   }
 }
