--- a/source/sass/blocks/main-form.scss
+++ b/source/sass/blocks/main-form.scss
@@ -3,13 +3,11 @@
   flex-direction: column;
 
   @media (--not-narrow-vp) {
-    width: 90%;
-    margin: 0 auto 42px auto;
+    padding: 0 40px 40px 40px;
   }
 
   @media (--wide-vp) {
-    width: 1300px;
-    margin: 0 auto 42px auto;
+    padding-bottom: 42px;
   }
 }
 
