--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -17,3 +17,16 @@
 .page__main {
   flex: 1;
 }
+
+.page__centerer {
+  margin: 0 20px;
+
+  @media (--middle-vp) {
+    margin: 0 30px;
+  }
+
+  @media (--wide-vp) {
+    margin: 0 auto;
+    width: 1220px;
+  }
+}
