--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -4,11 +4,12 @@
   flex-direction: column;
   align-items: center;
   max-width: 1280px;
+  padding-bottom: 2px;
 
   @media (--not-narrow-vp) {
     box-sizing: border-box;
     padding-top: 30px;
-    margin-left: 90px;
+    padding-left: 90px;
     padding-bottom: 500px;
     align-items: normal;
   }
@@ -18,7 +19,6 @@
     box-sizing: border-box;
     padding-top: 85px;
     padding-bottom: 240px;
-    margin: 0 auto;
     padding-left: 120px;
   }
 }
@@ -36,12 +36,7 @@
     color: $color__black;
     text-align: left;
     margin: 19px 0 42px 0;
-  }
-}
-
-.promo__title br {
-  @media (--narrow-vp) {
-    display: none;
+    width: 430px;
   }
 }
 
