--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -13,19 +13,19 @@
 @import "./blocks/logo.scss";
 @import "./blocks/menu-toggle.scss";
 @import "./blocks/header-nav.scss";
-@import "./blocks/promo-outer.scss";
+@import "./blocks/promo-container.scss";
 @import "./blocks/promo.scss";
 @import "./blocks/main-link.scss";
 @import "./blocks/health-programs.scss";
 @import "./blocks/program.scss";
 @import "./blocks/workflow.scss";
 @import "./blocks/demo.scss";
-@import "./blocks/demo-inner.scss";
+@import "./blocks/demo-container.scss";
 @import "./blocks/demo-cat.scss";
 @import "./blocks/demo-slider.scss";
 @import "./blocks/control.scss";
 @import "./blocks/footer.scss";
-@import "./blocks/contacts-outer.scss";
+@import "./blocks/contacts-container.scss";
 @import "./blocks/contacts.scss";
 @import "./blocks/footer-nav.scss";
 @import "./blocks/footer-logo.scss";
@@ -37,7 +37,7 @@
 @import "./blocks/product-block.scss";
 @import "./blocks/additives.scss";
 @import "./blocks/addons.scss";
-@import "./blocks/addons-inner.scss";
+@import "./blocks/addons-container.scss";
 @import "./blocks/stock.scss";
 @import "./blocks/main-form.scss";
 @import "./blocks/form.scss";
