--- a/source/templates/footer.twig
+++ b/source/templates/footer.twig
@@ -1,8 +1,8 @@
 <footer class="page__footer footer">
   <section class="footer__contacts">
     <h2 class="visually-hidden">Контакты</h2>
-    <div class="contacts-outer contacts-outer--dark">
-      <div class="contacts container">
+    <div class="contacts-container contacts-container--dark">
+      <div class="contacts page__centerer">
         <b class="contacts__title">Приглашаем <br> к сотрудничеству дилеров!</b>
         <p class="contacts__address">ул. Большая Конюшенная, д. 19/8
           <span class="contacts__city">Санкт-Петербург</span>
@@ -17,7 +17,7 @@
     </div>
 
     <nav class="footer-nav">
-      <div class="footer-inner container">
+      <div class="footer-inner page__centerer ">
         <div class="footer-logo">
           <a class="footer-logo__link" href="index.html" {% if permalink == "index.html" %}aria-current="page"{% endif %}>
             <img class="footer-logo__image" src="./img/logo-cat-text.svg" width="128" height="24"
