--- a/source/sass/blocks/contacts-container.scss
+++ b/source/sass/blocks/contacts-container.scss
@@ -2,9 +2,14 @@
   background-color: $color__white;
 
   @media (--wide-vp) {
-    width: 1300px;
-    padding-left: 50px;
+    align-self: center;
+    justify-self: center;
+    grid-column: 1 / 2;
+    grid-row: 1 / -1;
+    padding: 20px 0;
     box-sizing: border-box;
+    z-index: 2;
+    background-color: transparent;
   }
 
   &--dark {
