переделывает цвета по макету, меняет переменные и глобальные стили

--- a/source/sass/blocks/additives.scss
+++ b/source/sass/blocks/additives.scss
@@ -17,7 +17,7 @@
   padding-right: 20px;
   margin: 0 0 34px 0;
   font-weight: 400;
-  background-color: $color__white;
+  background-color: var(--color__white);
 
   @include line-height(24,24,36,36);
   @include font-size(24,36);
