--- a/source/sass/global/container.scss
+++ b/source/sass/global/container.scss
@@ -1,17 +1,17 @@
-.container {
-  padding-left: 20px;
-  padding-right: 20px;
-  margin: 0 auto;
-  box-sizing: border-box;
+// .container {
+//   padding-left: 20px;
+//   padding-right: 20px;
+//   margin: 0 auto;
+//   box-sizing: border-box;
 
-  @media (--not-narrow-vp) {
-    padding-left: 30px;
-    padding-right: 30px;
-  }
+//   @media (--not-narrow-vp) {
+//     padding-left: 30px;
+//     padding-right: 30px;
+//   }
 
-  @media (--wide-vp) {
-    width: 1280px;
-    padding-left: 40px;
-    padding-right: 40px;
-  }
-}
+//   @media (--wide-vp) {
+//     width: 1280px;
+//     padding-left: 40px;
+//     padding-right: 40px;
+//   }
+// }
