--- a/source/sass/blocks/academy-logo.scss
+++ b/source/sass/blocks/academy-logo.scss
@@ -4,7 +4,7 @@
   align-items: center;
   justify-content: space-between;
   text-decoration: none;
-  color: $color__dark-grey;
+  color: var(--color__dark-grey);
   font-family: var(--main-font);
   font-size: 16px;
   line-height: 18.4px;
