--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -13,7 +13,7 @@
     width: 565px;
     box-sizing: border-box;
     padding: 57px 76px 60px 80px;
-    background: $color__white;
+    background: var(--color__white);
   }
 }
 
