--- a/source/sass/blocks/control.scss
+++ b/source/sass/blocks/control.scss
@@ -1,8 +1,6 @@
 .control {
-  // position: relative;
   display: flex;
   width: 65.5%;
-  // margin: 0 auto;
   align-items: center;
   justify-content: space-between;
   box-sizing: border-box;
@@ -35,8 +33,8 @@
 .control__bar {
   width: 100%;
   height: 14px;
-  background-color: $color__white;
-  border: 1px solid $color__light-grey;
+  background-color: var(--color__white);
+  border: 1px solid var(--color__light-grey);
   border-radius: 6px;
 
   @media (--not-narrow-vp) {
@@ -56,7 +54,7 @@
   height: 6px;
   border: none;
   border-radius: 6px;
-  background-color: $color__green;
+  background-color: var(--color__green);
   transition-duration: 0.5s;
   transition-timing-function: ease-in-out;
 
@@ -67,8 +65,8 @@
     width: 34px;
     height: 34px;
     margin: 0 auto;
-    background: $color__white;
-    border: 1px solid $color__light-grey;
+    background: var(--color__white);
+    border: 1px solid var(--color__light-grey);
     border-radius: 50%;
     filter: drop-shadow(0 1px 3px rgba(0, 0, 0, 0.16));
   }
@@ -86,7 +84,7 @@
       left: 13px;
       width: 6px;
       height: 6px;
-      background-color: $color__green;
+      background-color: var(--color__green);
       border-radius: 50%;
     }
   }
