--- a/source/sass/blocks/demo-cat.scss
+++ b/source/sass/blocks/demo-cat.scss
@@ -15,7 +15,7 @@
 
 .demo-cat__title {
   box-sizing: border-box;
-  color: $color__black;
+  color: var(--color__black);
   font-weight: 400;
   margin: 0 0 41px 0;
 
@@ -32,7 +32,7 @@
 }
 
 .demo-cat__subtitle {
-  color: $color__dark-grey;
+  color: var(--color__dark-grey);
   font-family: var(--main-font);
   padding-bottom: 20px;
   margin: 0;
@@ -91,7 +91,7 @@
   position: relative;
   justify-self: center;
   display: flex;
-  border: 1px solid $color__light-grey;
+  border: 1px solid var(--color__light-grey);
   border-radius: 3px;
   flex-direction: column;
   align-items: center;
@@ -130,7 +130,7 @@
   top: 44px;
   z-index: 2;
   padding: 0 10px;
-  background-color: $color__grey;
+  background-color: var(--color__grey);
   margin: 0;
   text-align: center;
   font-family: var(--main-font);
