--- a/source/sass/blocks/extra.scss
+++ b/source/sass/blocks/extra.scss
@@ -23,13 +23,13 @@
   padding-top: 13px;
   padding-bottom: 15px;
   align-items: baseline;
-  border-top: 1px solid $color__light-grey;
-  border-bottom: 1px solid $color__light-grey;
+  border-top: 1px solid var(--color__light-grey);
+  border-bottom: 1px solid var(--color__light-grey);
 
   @media (--not-narrow-vp) {
     grid-template-columns: 60% 25% auto;
     padding: 25px 37px;
-    border: 1px solid $color__light-grey;
+    border: 1px solid var(--color__light-grey);
   }
 
   @media (--wide-vp) {
