--- a/source/sass/blocks/form-group.scss
+++ b/source/sass/blocks/form-group.scss
@@ -158,9 +158,9 @@
       width: 30px;
       height: 30px;
       content: "";
-      border: 1px solid $color__light-grey;
+      border: 1px solid var(--color__light-grey);
       border-radius: 50%;
-      background-color: $color__white;
+      background-color: var(--color__white);
     }
 
     &::after {
@@ -172,7 +172,7 @@
       height: 13px;
       content: "";
       border-radius: 50%;
-      background-color: $color__green;
+      background-color: var(--color__green);
     }
   }
 
@@ -188,8 +188,8 @@
       width: 30px;
       height: 30px;
       content: "";
-      border: 1px solid $color__light-grey;
-      background-color: $color__white;
+      border: 1px solid var(--color__light-grey);
+      background-color: var(--color__white);
     }
 
     &::after {
