--- a/source/sass/blocks/header-nav.scss
+++ b/source/sass/blocks/header-nav.scss
@@ -18,6 +18,12 @@
     z-index: 2;
   }
 
+  &--color_change {
+    @media (--wide-vp) {
+      --changed-color: var(--color__white);
+    }
+  }
+
   &--noJS {
     @media (--narrow-vp) {
       display: block;
@@ -33,7 +39,7 @@
 
   @media (--narrow-vp) {
     display: flex;
-    background-color: $color__white;
+    background-color: var(--color__white);
     width: 100%;
     flex-direction: column;
     align-items: center;
@@ -68,7 +74,7 @@
 .header-nav__link {
   display: block;
   width: max-content;
-  color: $color__black;
+  color: var(--changed-color, --color__black);
   text-transform: uppercase;
   text-decoration: none;
   font-size: calc(18 / 16) + rem;
@@ -83,12 +89,5 @@
   @media (--wide-vp) {
     font-size: calc(20 / 16) + rem;
     line-height: calc(29.64 / 20);
-    color: $color__black;
-  }
-
-  &--white {
-    @media (--wide-vp) {
-      color: $color__white;
-    }
   }
 }
