--- a/source/sass/blocks/menu-toggle.scss
+++ b/source/sass/blocks/menu-toggle.scss
@@ -6,8 +6,8 @@
   height: 18px;
 
   background: transparent;
-  border-top: 1.5px solid #000000;
-  border-bottom: 1.5px solid #000000;
+  border-top: 1.5px solid var(--color__black);
+  border-bottom: 1.5px solid var(--color__black);
   border-left: none;
   border-right: none;
   font-size: 0;
@@ -35,7 +35,7 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    background: #000000;
+    background: var(--color__black);
     transform: translate(-50%, -50%);
     transition: 0.5s;
     transition-timing-function: ease-in-out;
