--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -7,10 +7,10 @@
   padding: 0;
   font-family: "Oswald", sans-serif;
   font-weight: 400;
-  font-size: $font_mobi-size;
+  font-size: var(--font_mobi-size);
 
   @media (--not-narrow-vp) {
-    font-size: $font_default-size;
+    font-size: var(--font_default-size);
   }
 }
 
@@ -29,4 +29,17 @@
     margin: 0 auto;
     width: 1220px;
   }
+}
+
+.page__hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
