--- a/source/sass/blocks/product-block.scss
+++ b/source/sass/blocks/product-block.scss
@@ -8,7 +8,7 @@
 
   @media (--not-narrow-vp) {
     grid-template-columns: 1fr;
-    background-color: $color__grey;
+    background-color: var(--color__grey);
     padding: 0 36px 37px 36px;
   }
 
@@ -19,13 +19,13 @@
     justify-content: center;
     align-items: center;
     text-align: center;
-    background-color: $color__white;
-    border-top: 2px solid $color__grey;
-    border-bottom: 2px solid $color__grey;
+    background-color: var(--color__white);
+    border-top: 2px solid var(--color__grey);
+    border-bottom: 2px solid var(--color__grey);
 
     @media (--not-narrow-vp) {
       padding-top: 85px;
-      border: 2px solid $color__grey;
+      border: 2px solid var(--color__grey);
     }
   }
 
