--- a/source/sass/blocks/product.scss
+++ b/source/sass/blocks/product.scss
@@ -28,7 +28,7 @@
   @media (--not-narrow-vp) {
     padding-bottom: 8px;
     margin-bottom: 7px;
-    border-bottom: 1px solid $color__light-grey;
+    border-bottom: 1px solid var(--color__light-grey);
   }
 }
 
