--- a/source/sass/blocks/program.scss
+++ b/source/sass/blocks/program.scss
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
-  background-color: $color__grey;
+  background-color: var(--color__grey);
   min-height: 266px;
 
   @media (--middle-vp) {
@@ -122,7 +122,7 @@
     width: 50px;
     height: 50px;
     border-radius: 50%;
-    background-color: $color__green;
+    background-color: var(--color__green);
 
     @media (--middle-vp) {
       width: 200px;
@@ -143,7 +143,7 @@
 .program__description {
   padding: 29px 3px 32px 0;
   margin: 0;
-  color: $color__dark-grey;
+  color: var(--color__dark-grey);
   font-family: var(--main-font);
 
   @include font-size(14,16);
@@ -168,7 +168,7 @@
 
   @include font-size(16,20);
   @include line-height(16,16,20,29.6);
-  @include link($color__black);
+  @include link(var(--color__black));
 
   @media (--not-narrow-vp) {
     padding: 10px 0 12px 33px;
