--- a/source/sass/blocks/stock.scss
+++ b/source/sass/blocks/stock.scss
@@ -8,7 +8,7 @@
   padding-bottom: 43px;
   min-height: 290px;
   width: calc(100vw - 40px);
-  color: $color__white;
+  color: var(--color__white);
   background-image: url("../../img/decoration/catalog_cat-on-bag.jpg");
   background-repeat: no-repeat;
   background-position: center center;
@@ -24,14 +24,10 @@
     width: calc(100vw - 60px);
     background-size: cover;
     text-align: left;
-    //padding-right: 115px;
   }
 
   @media (--wide-vp) {
-    // grid-column: 2 / 3;
-    // grid-row: 2 / 3;
     width: 22%;
-    // height: 289px;
     padding-right: 40px;
     justify-self: center;
     background-image: url("../../img/decoration/catalog_cat-on-bag.jpg");
