--- a/source/templates/footer.twig
+++ b/source/templates/footer.twig
@@ -2,8 +2,8 @@
 
   <section class="footer__contacts">
     <div class="footer__contacts-wrapper">
-      <h2 class="visually-hidden">Контакты</h2>
-      <div class="contacts-container">
+      <h2 class="page__hidden">Контакты</h2>
+      <div class="contacts-container {% if permalink != "index.html" %} contacts-container--color_change {% endif %}">
         <div class="contacts page__centerer">
           <b class="contacts__title">Приглашаем <br> к сотрудничеству дилеров!</b>
           <p class="contacts__address">ул. Большая Конюшенная, д. 19/8
@@ -32,7 +32,7 @@
             {% for link in links %}
               <li class="social__item">
                 <a class="social__link" href="{{ link.source }}" target="_blank">{{ link.name }}
-                  <span class="visually-hidden">{{ link.name }}</span>
+                  <span class="page__hidden">{{ link.name }}</span>
                 </a>
               </li>
             {% else %}
