--- a/source/templates/footer.twig
+++ b/source/templates/footer.twig
@@ -19,7 +19,7 @@
     </div>
 
     <nav class="footer-nav">
-      <div class="footer-inner page__centerer ">
+      <div class="footer-container page__centerer ">
         <div class="footer-logo">
           <a class="footer-logo__link" href="index.html">
             <img class="footer-logo__image" src="./img/logo-cat-text.svg" width="128" height="24"
