--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -27,7 +27,7 @@
 @import "./blocks/contacts.scss";
 @import "./blocks/footer-nav.scss";
 @import "./blocks/footer-logo.scss";
-@import "./blocks/footer-inner.scss";
+@import "./blocks/footer-container.scss";
 @import "./blocks/social.scss";
 @import "./blocks/academy-logo.scss";
 @import "./blocks/catalog.scss";
