--- a/source/sass/blocks/addons.scss
+++ b/source/sass/blocks/addons.scss
@@ -23,7 +23,7 @@
 }
 
 .addons__title {
-  padding-left: 20px;
+  padding: 0 20px;
   margin-bottom: 35px;
   font-weight: 400;
 
@@ -31,12 +31,9 @@
   @include font-size(24,36);
 
   @media (--not-narrow-vp) {
-    padding-left: 70px;
+    padding: 0 70px;
     margin-bottom: 80px;
-  }
-
-  @media (--wide-vp) {
-    margin-left: auto;
-    margin-right: auto;
+    background-color: var(--color__white);
+    width: 340px;
   }
 }
