--- a/source/templates/footer.twig
+++ b/source/templates/footer.twig
@@ -4,11 +4,13 @@
     <div class="footer__contacts-wrapper">
       <h2 class="page__hidden">Контакты</h2>
       <div class="contacts-container {% if permalink != "index.html" %} contacts-container--color_change {% endif %}">
-        <div class="contacts page__centerer">
-          <b class="contacts__title">Приглашаем <br> к сотрудничеству дилеров!</b>
-          <p class="contacts__address">ул. Большая Конюшенная, д. 19/8
-            <span class="contacts__city">Санкт-Петербург</span>
-          </p>
+        <div class="page__centerer">
+          <div class="contacts">
+            <b class="contacts__title">Приглашаем <br> к сотрудничеству дилеров!</b>
+            <p class="contacts__address">ул. Большая Конюшенная, д. 19/8
+              <span class="contacts__city">Санкт-Петербург</span>
+            </p>
+          </div>
         </div>
       </div>
       <div class="footer__map">
@@ -19,7 +21,7 @@
     </div>
 
     <nav class="footer-nav">
-      <div class="footer-container page__centerer ">
+      <div class="footer-container page__centerer">
         <div class="footer-logo">
           <a class="footer-logo__link" href="index.html">
             <img class="footer-logo__image" src="./img/logo-cat-text.svg" width="128" height="24"
@@ -41,7 +43,7 @@
           </ul>
         </div>
 
-        <a class="academy-logo" href="https://htmlacademy.ru/intensive/adaptive" target="_blank">Html Academy
+        <a class="academy-logo" href="https://htmlacademy.ru/intensive/adaptive" target="_blank">HTML Academy
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 60" width="27" height="34">
             <path fill="#666666"
               d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17 36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2 1.8v13.6z" />
