доделывает мелкие декоративные элементы

--- a/source/sass/blocks/addons.scss
+++ b/source/sass/blocks/addons.scss
@@ -2,17 +2,23 @@
   position: relative;
   padding-bottom: 35px;
 
-  &::after {
+  &::before {
     position: absolute;
     top: 15px;
-    right: 0;
+    left: 0;
     z-index: -1;
     display: block;
     padding: 0;
-    width: 100vw;
+    width: calc(100vw - 20px);
     height: 2px;
     content: "";
     background-color: var(--color__green);
+
+    @media (--middle-vp) {
+      top: 23px;
+      left: -30px;
+      width: 100vw;
+    }
 
     @media (--not-narrow-vp) {
       top: 23px;
@@ -20,15 +26,39 @@
       width: 100vw;
     }
   }
+
+  &::after {
+    @media (--wide-vp) {
+      position: absolute;
+      top: 23px;
+      right: 0;
+      z-index: -1;
+      display: block;
+      padding: 0;
+      width: calc(100vw - 20px);
+      height: 2px;
+      content: "";
+      background-color: var(--color__green);
+    }
+  }
 }
 
 .addons__title {
-  padding: 0 20px;
+  padding: 0 20px 0 0;
   margin-bottom: 35px;
+  background-color: var(--color__white);
   font-weight: 400;
+  width: 230px;
 
   @include line-height(24,24,36,36);
   @include font-size(24,36);
+
+  @media (--middle-vp) {
+    padding: 0 35px;
+    margin: 0 0 80px 40px;
+    background-color: var(--color__white);
+    width: 340px;
+  }
 
   @media (--not-narrow-vp) {
     padding: 0 70px;
