--- a/source/sass/blocks/header-nav.scss
+++ b/source/sass/blocks/header-nav.scss
@@ -92,15 +92,21 @@
     line-height: calc(29.64 / 20);
   }
 
-  &--active::before {
+  &--current::before {
     position: absolute;
     top: 40px;
     right: 0;
     content: "";
-    display: none;
+    display: block;
     width: 100%;
     height: 2px;
     background-color: var(--color__green);
+  }
+
+  &--changed_underline::before {
+    @media (--wide-vp) {
+      background-color: var(--changed-color);
+    }
   }
 }
 
