собирает картинки и иконки

--- a/source/sass/blocks/stock.scss
+++ b/source/sass/blocks/stock.scss
@@ -9,7 +9,7 @@
   min-height: 290px;
   // width: calc(100vw - 40px);
   color: var(--color__white);
-  background-image: url("../../img/decoration/catalog_cat-on-bag.jpg");
+  background-image: url("../../img/decoration/cat-bag@1x.jpg");
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
@@ -19,7 +19,7 @@
     min-height: 200px;
     padding-top: 72px;
     justify-content: flex-start;
-    background-image: url("../../img/decoration/catalog_cat-on-bag@2x.jpg");
+    background-image: url("../../img/decoration/cat-bag_l@1x.jpg");
     background-position: center center;
     // width: calc(100vw - 60px);
     background-size: cover;
@@ -30,7 +30,7 @@
     width: 22%;
     padding-right: 40px;
     justify-self: center;
-    background-image: url("../../img/decoration/catalog_cat-on-bag.jpg");
+    background-image: url("../../img/decoration/cat-bag@1x.jpg");
     background-position: 50% 50%;
     background-size: contain;
     text-align: right;
