--- a/source/sass/blocks/promo-container.scss
+++ b/source/sass/blocks/promo-container.scss
@@ -10,7 +10,7 @@
       rgba(104, 183, 56, 0.85),
       rgba(104, 183, 56, 0.85)
     ),
-    url("../../img/header_happy-cat.jpg");
+    url("../../img/happy-cat-s@1x.jpg");
   background-repeat: no-repeat;
   background-color: #29530f;
   background-position: 50% 0;
@@ -39,7 +39,8 @@
           rgba(104, 183, 56, 0.85),
           rgba(104, 183, 56, 0.85)
         ),
-        url("../../img/header_happy-cat.jpg");
+        url("../../img/happy-cat-l@1x.jpg");
+      background-color: #2e5c12;
       background-position: right top;
       background-repeat: no-repeat;
     }
