--- a/source/templates/footer.twig
+++ b/source/templates/footer.twig
@@ -1,17 +1,15 @@
 <footer class="page__footer footer">
 
-  <section class="footer__contacts">
-    <div class="footer__contacts-wrapper">
+
+    <section class="footer__contacts-wrapper">
       <h2 class="page__hidden">Контакты</h2>
-      <div class="contacts-container {% if permalink != "index.html" %} contacts-container--color_change {% endif %}">
-        <div class="page__centerer">
+      <div class="footer__contacts-container {% if permalink != "index.html" %} contacts-container--color_change {% endif %}">
           <div class="contacts">
             <b class="contacts__title">Приглашаем <br> к сотрудничеству дилеров!</b>
             <p class="contacts__address">ул. Большая Конюшенная, д. 19/8
               <span class="contacts__city">Санкт-Петербург</span>
             </p>
           </div>
-        </div>
       </div>
       <div class="footer__map">
         <iframe
@@ -33,7 +31,10 @@
           <ul class="social__list">
             {% for link in links %}
               <li class="social__item">
-                <a class="social__link" href="{{ link.source }}" target="_blank">{{ link.name }}
+                <a class="social__link" href="{{ link.source }}" target="_blank">
+                  <svg width="{{ link.width }}" height="{{ link.height }}";>
+                    <use xlink:href="{{ link.path }}{{ link.id }}"></use>
+                  </svg>
                   <span class="page__hidden">{{ link.name }}</span>
                 </a>
               </li>
