спрайты и начало адаптации картинок

--- a/source/templates/header.twig
+++ b/source/templates/header.twig
@@ -1,9 +1,7 @@
 <header class="page__header">
   <div class="header page__centerer">
     <a class="logo" href="index.html" {% if permalink == "index.html" %}aria-current="page"{% endif %}>
-      <img class="logo__icon" src="./img/logo-cat-mark.svg" width="34" height="38" alt="Логотип кэт-энерджи.">
-      <img class="logo__text" src="./img/logo-cat-text.svg" width="101" height="18"
-        alt="Текст логотипа кэт-энерджи.">
+      <img class="logon__icon" src="./img/logo-s.svg" width="191" height="38" alt="Логотип кэт-энерджи.">
     </a>
     <button class="menu-toggle" type="button">
       <span class="page__hidden">Меню.</span>
