--- a/source/sass/blocks/stock.scss
+++ b/source/sass/blocks/stock.scss
@@ -7,33 +7,44 @@
   padding-top: 130px;
   padding-bottom: 43px;
   min-height: 290px;
-  // width: calc(100vw - 40px);
   color: var(--color__white);
-  background-image: url("../../img/decoration/cat-bag@1x.jpg");
+  background-image: url("../../img/cat-bag@1x.jpg");
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
   text-align: center;
 
+  @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
+    background-image: url("../../img/cat-bag@2x.jpg");
+  }
+
   @media (--not-narrow-vp) {
     min-height: 200px;
     padding-top: 72px;
     justify-content: flex-start;
-    background-image: url("../../img/decoration/cat-bag_l@1x.jpg");
+    background-image: url("../../img/cat-bag_l@1x.jpg");
     background-position: center center;
-    // width: calc(100vw - 60px);
+
     background-size: cover;
     text-align: left;
+
+    @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
+      background-image: url("../../img/cat-bag_l@2x.jpg");
+    }
   }
 
   @media (--wide-vp) {
     width: 22%;
     padding-right: 40px;
     justify-self: center;
-    background-image: url("../../img/decoration/cat-bag@1x.jpg");
+    background-image: url("../../img/cat-bag@1x.jpg");
     background-position: 50% 50%;
     background-size: contain;
     text-align: right;
+
+    @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
+      background-image: url("../../img/cat-bag@2x.jpg");
+    }
   }
 
   &::before {
