--- a/source/sass/blocks/logo.scss
+++ b/source/sass/blocks/logo.scss
@@ -5,10 +5,25 @@
 }
 
 .logo__icon {
-  display: block;
-  margin-right: 57px;
+  // margin-right: 57px;
+
+  @media (--middle-vp) {
+    width: 60px;
+    height: 52px;
+  }
 }
 
 .logo__text {
   transform: translateY(3px);
+
+  @media (--not-narrow-vp) {
+    [id="energy"] {
+      fill: var(--color__dark-grey);
+    }
+  }
+
+  @media (--wide-vp) {
+    height: 20px;
+    width: auto;
+  }
 }
