--- a/source/sass/global/media.scss
+++ b/source/sass/global/media.scss
@@ -3,3 +3,4 @@
 @custom-media --middle-vp (768px <= width < 1279.9px);
 @custom-media --wide-vp (width >= 1280px);
 @custom-media --not-wide-vp (width <= 1279.9px);
+@custom-media --x2-resolution (resolution > 1.5dppx);
