--- a/source/templates/footer.twig
+++ b/source/templates/footer.twig
@@ -31,7 +31,7 @@
             {% for link in links %}
               <li class="social__item">
                 <a class="social__link" href="{{ link.source }}" target="_blank">
-                  <svg width="{{ link.width }}" height="{{ link.height }}">
+                  <svg class="social__icon">
                     <use xlink:href="{{ link.path }}{{ link.id }}"></use>
                   </svg>
                   <span class="page__hidden">{{ link.name }}</span>
