--- a/source/templates/layout.twig
+++ b/source/templates/layout.twig
@@ -9,8 +9,8 @@
   content="интернет-магазин кошачьей еды, питание для котов, кошачий корм, кошачья еда СПб , Питер, Санкт-Петербург">
   <title>{{ pages[pageId].name }} | Кэт энерджи | HTML Academy</title>
   <link rel="icon" href="favicon.ico">
-  <link rel="icon" href="./img/favicons/favicon.svg" type="image/svg+xml">
-  <link rel="apple-touch-icon" href="./img/favicons/favicon-180.png">
+  <link rel="icon" href="./favicons/favicon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="./favicons/favicon-180.png">
   <link rel="manifest" href="./manifest.webmanifest">
   <link rel="stylesheet" href="./css/style.min.css">
 </head>
